# Cat2Map

./: .gitignore  CMakeLists.txt  Cat2Map.cpp  Cat2Map.hpp  LICENSE  README.md  testHEALPixIO.cpp
cmake/: FindCFITSIO.cmake  FindHEALPix.cmake
data/: euclid.ini  example.ini
